--- a/shard.yml
+++ b/shard.yml
@@ -9,8 +9,8 @@ crystal: 1.0.0
 license: MIT
 
 dependencies:
-  myhtml:
-    github: kostya/myhtml
+  lexbor:
+    github: kostya/lexbor
 
 development_dependencies:
   webmock:
