check code format on CI

--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -5,6 +5,18 @@ on:
   pull_request:
 
 jobs:
+  check_format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Crystal
+        uses: crystal-lang/install-crystal@v1
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: shards install
+      - name: Check format
+        run: crystal tool format --check
+
   test:
     strategy:
       fail-fast: false
